clusters/mharikmert.dev/default/home/home-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-svc
  name: home-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: home
  type: ClusterIP
