clusters/mharikmert.dev/default/home/home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: mharikmert.dev
      http:
        paths:
          - backend:
              service:
                name: home-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
